apps/paseo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paseo
  namespace: paseo
  labels:
    app.kubernetes.io/part-of: gitops
spec:
  selector:
    app: paseo
  ports:
    - name: http
      port: 6767
      targetPort: 6767
